23.5 Test T Bank (Интеграция с сервисом эквайринга - тест)